creusot/tests/should_fail/prusti/calls/give_static.stderr
error[creusot]: invalid mut dereference of expression with home `'old` and lifetime `'static` at time-slice `'curr`
  --> give_static.rs:11:12
   |
11 | #[ensures(*old(give_static()) == 42u32)]
   |            ^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

